# sudoku_web_solver

./: .gitignore  235.js  806.worker.js  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  sudoku.css  webpack.common.js  webpack.dev.js  worker.worker.js
.github/workflows/: deploy.yml  test.yml
js/: index.js  solver.js  worker.js
solver/: Cargo.toml
solver/benches/: bench_solver.rs
solver/src/: config.rs  lib.rs  options.rs  output.rs  rules.rs  solvers.rs  solving.rs  sudoku.rs  threading.rs  util.rs
solver/src/solvers/: base.rs  cage.rs  elim.rs  sets.rs  single.rs  xwing.rs  xywing.rs
solver/tests/: solver.rs
style/: borders.scss  cell.scss  colors.scss  editor.scss  index.scss  mixins.scss  sudoku.scss  variables.scss
we-derive/: Cargo.toml
we-derive/src/: lib.rs
webelements/: Cargo.toml
webelements/src/: element.rs  lib.rs
webelements/tests/: webelements.rs
websolver/: Cargo.toml
websolver/src/: lib.rs  ui.rs  util.rs
websolver/src/ui/: build.rs  controller.rs  model.rs  view.rs
websolver/src/ui/controller/: app.rs  editor.rs  info.rs  sudoku.rs
websolver/src/ui/model/: editor.rs  info.rs  sudoku.rs
websolver/src/ui/resources/: map.rs
websolver/src/ui/view/: app.rs  common.rs  editor.rs  info.rs  rules.rs  sudoku.rs
websolver/tests/: app.rs
worker/: Cargo.toml
worker/src/: lib.rs
