[package]
name = "solver"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[lib]
bench = false

[dependencies]
serde = { version="1.0.118", features=["derive"] }

[dev-dependencies]
criterion = { version="0.3.3", default-features=false }

[[bench]]
name = "bench_solver"
harness = false
