[package]
name = "solver"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[lib]
bench = false

[dependencies]
serde = { version="1.0.126", features=["derive"] }
smallvec =  { version="1.6.1", features=["serde"] }

[dev-dependencies]
criterion = { version="0.3.4", default-features=false }

[[bench]]
name = "bench_solver"
harness = false
