[package]
name = "we-derive"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
html_parser = "0.5.0"
quote = "1.0.7"
proc-macro2 = { version="1.0.24", features=["span-locations"] }
syn = { version="1.0.54", features=["extra-traits"]}
