[package]
name = "websolver"
description = "websolver"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = [
    "alloc", 
]
alloc = ["wee_alloc"]

[dependencies]
solver = { version="0.1.0", path="../solver" }
webelements = "0.1.1"

js-sys = "0.3.50"
lazy_static = "1.4.0"
serde = { version="1.0.126", features=["derive"] }
wasm-bindgen = {version="0.2.74", features=["serde-serialize"]}
console_error_panic_hook = "0.1.5"

wee_alloc = { version = "0.4.2", optional=true }

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.24"
wasm-bindgen-futures = "0.4.24"
futures = "0.3.15"
js-sys = "0.3.51"
